<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_margin">

    <TextView
        android:id="@+id/room_number_view"
        style="@style/editor_title_views"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ROOM 1000X" />

    <TextView
        android:id="@+id/room_type_view"
        style="@style/editor_title_views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_number_view"
        tools:text="DOUBLE BED. NON SMOKING." />

    <View
        android:id="@+id/visual_break_view"
        style="@style/hzBreakView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/room_type_view" />

    <TextView
        android:id="@+id/guest_name_text_view"
        style="@style/editor_options_headers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visual_break_view"
        tools:text="Guest Name: " />

    <EditText
        android:id="@+id/guest_name_edit_view"
        style="@style/editor_editable"
        android:hint="@string/guest_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guest_name_text_view"
        app:layout_constraintTop_toBottomOf="@id/visual_break_view" />

    <View
        android:id="@+id/visual_break_two"
        style="@style/hzBreakView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guest_name_edit_view" />

    <TextView
        android:id="@+id/price_text_view"
        style="@style/editor_options_headers"
        android:layout_marginTop="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visual_break_two"
        tools:text="Price: " />

    <EditText
        android:id="@+id/price_edit_view"
        style="@style/editor_editable"
        android:hint="@string/price"
        android:layout_marginTop="@dimen/general_margin"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/price_text_view"
        app:layout_constraintTop_toBottomOf="@id/visual_break_two" />

    <View
        android:id="@+id/visual_break_price_date"
        style="@style/hzBreakView"
        android:layout_marginTop="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_text_view" />

    <TextView
        android:id="@+id/checkin_date_view"
        style="@style/editor_date_view"
        android:hint="@string/arrival_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visual_break_price_date"
        tools:text="ARRIVE" />

    <Button
        android:id="@+id/check_in_date_button"
        style="@style/OptionSelectionButton"
        android:layout_marginTop="@dimen/general_margin"
        android:text="@string/pick_arrival_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visual_break_price_date"
        tools:text="PICK DATE" />

    <View
        android:id="@+id/visual_break_dates"
        style="@style/hzBreakView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkin_date_view" />

    <TextView
        android:id="@+id/checkout_date_view"
        style="@style/editor_date_view"
        android:hint="@string/departure_date"
        android:layout_marginTop="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visual_break_dates"
        tools:text="CHECK OUT" />

    <Button
        android:id="@+id/checkout_date_button"
        style="@style/OptionSelectionButton"
        android:layout_marginTop="@dimen/general_margin"
        android:text="@string/pick_departure_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visual_break_dates"
        tools:text="PICK DATE" />

    <View
        android:id="@+id/break_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkout_date_button" />

    <Button
        android:id="@+id/save_button"
        style="@style/FinalSelectionButton"
        android:layout_marginTop="@dimen/general_margin"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/break_view" />

</android.support.constraint.ConstraintLayout>